# Kaleido

./: .dockerignore  .gitignore  .gitmodules  Makefile  README.md  install.sh  install_pbc.sh  main.go  script.sh
app/: Cargo.toml  build.rs
app/src/: app.rs  enclave_def.rs  lib.rs  main.rs  test_podr2.rs
app/src/enclave/: ecalls.rs  mod.rs  ocalls.rs  sgx_to_podr2_error.rs
app/src/models/: app_state.rs  config.rs  mod.rs  podr2_commit.rs  podr2_commit_data.rs  podr2_commit_response.rs  req.rs
app/src/routes/: mod.rs
cess_bncurve/: Cargo.toml
cess_bncurve/src/: config.rs  lib.rs
cess_curve/: Cargo.toml
cess_curve/src/: lib.rs
cess_pbc/: Cargo.toml  build.rs
cess_pbc/pbc/: Makefile.am  bootstrap  configure.ac
cess_pbc/pbc/arith/: dlog.c  fasterfp.c  fastfp.c  field.c  fieldquadratic.c  fp.c  init_random.c  montfp.c  multiz.c  naivefp.c  poly.c  random.c  ternary_extension_field.c  z.c
cess_pbc/pbc/ecc/: a_param.c  curve.c  d_param.c  e_param.c  eta_T_3.c  f_param.c  g_param.c  hilbert.c  mnt.c  mpc.c  mpc.h  pairing.c  param.c  param.h  singular.c
cess_pbc/pbc/include/: pbc.h  pbc_field.h  pbc_init_random.h  pbc_param.h  pbc_random.h  pbc_sgx_ext.h  pbc_utils.h
cess_pbc/pbc/misc/: darray.c  extend_printf.c  get_time.c  memory.c  pbc_sgx_ext.c  utils.c
cess_pbc/src/: lib.rs
cess_pbc/src/pbc/: pbc_intf.cpp  pbc_intf.hpp
docker/: Docker Script Of Kaleido.md  build.sh  build_bin.sh  build_env.sh
docker/env/: 02_binutils.sh  03_sdk.sh  04_psw.sh  05_rust.sh  cess-sgxrust-env.Dockerfile  cess-sgxrust-pbc-env.Dockerfile
docker/runner/: Dockerfile  start.sh
docs/: sgx configuration.md
enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl  Makefile  Xargo.toml  build.rs
enclave/src/: lib.rs  merkletree_generator.rs  ocall_def.rs  pbc.rs  podr2.rs  podr2_proof_commit.rs  statics.rs
enclave/src/attestation/: hex.rs  mod.rs
enclave/src/bncurve/: PBCInfo.rs  mod.rs
enclave/src/keys/: aes_keys.rs  mod.rs  rsa_keys.rs
enclave/src/param/: mod.rs  podr2_commit_data.rs  podr2_commit_response.rs  podr2_pri_commit_data.rs  podr2_pub_commit_data.rs
enclave/src/pbc/: pbc_intf.cpp
enclave/src/podr2/: mod.rs  proof.rs
enclave/src/podr2_pri/: chal_gen.rs  gen_proof.rs  key_gen.rs  mod.rs  sig_gen.rs  verify_proof.rs
enclave/src/podr2_pub/: mod.rs  proof.rs
enclave/src/podr2_v1_pri/: chal_gen.rs  gen_proof.rs  key_gen.rs  sig_gen.rs  verify_proof.rs
enclave/src/podr2_v1_pub_pbc/: mod.rs
enclave/src/podr2_v2_pub_pbc/: mod.rs  proof.rs
enclave/src/podr2_v2_pub_rsa/: key_gen.rs  mod.rs  sig_gen.rs
enclave/src/secret_exchange/: cert.rs  hex.rs  mod.rs
enclave/src/utils/: bloom_filter.rs  convert.rs  enclave_mem.rs  file.rs  mht.rs  mod.rs  post.rs  thread_controller.rs  timer.rs
klib/: Cargo.toml  build.rs  cbindgen.toml
klib/src/: lib.rs
scripts/: deps.sh  install.sh  install_build_dep.sh  install_sgx.sh  sgx.sh  utils.sh
threadpool/: Cargo.toml
threadpool/src/: lib.rs
