[package]
name = "app"
version = "0.0.2"
authors = ["CESS Labs"]
build = "build.rs"
edition = "2021"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
hex = "0.4"
actix-web = "3.3.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1"
base64 = "0.13.0"
env_logger = "0.9.0"
log = "^0.4"
url = "2.2.2"
libc = "0.2.126"
futures = "0.3.21"
tokio = { version = "1.19.2", features = ["full"] }
dotenv = "0.15.0"
toml = "0.5.9"
reqwest = {version = "0.11.11", features = ["blocking"] }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../teaclave-sgx-sdk/sgx_types" }
sgx_urts = { path = "../teaclave-sgx-sdk/sgx_urts" }
