[package]
name = "cess_curve"
version = "0.1.0"
edition = "2021"
authors = ["CESS Labs"]

[lib]
name = "cess_curve"
crate-type = ["rlib"]

[dependencies]
cess_pbc = { path = "../cess_pbc" }
sgx_serialize_derive = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_serialize = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_tstd = { path = "../teaclave-sgx-sdk/sgx_tstd" }
sgx_rand = { path = "../teaclave-sgx-sdk/sgx_rand" }
sgx_tcrypto = { path = "../teaclave-sgx-sdk/sgx_tcrypto" }
sgx_serialize = { path = "../teaclave-sgx-sdk/sgx_serialize" }
sgx_serialize_derive = { path = "../teaclave-sgx-sdk/sgx_serialize_derive" }
