[package]
name = "cess_pbc"
version = "0.1.0"
links = "pbc"
edition = "2021"
authors = ["CESS Labs"]

[lib]
name = "cess_pbc"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.46"
cc = "1.0"

[dependencies]
