[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_alloc = { path = "../teaclave-sgx-sdk/sgx_alloc" }
sgx_types = { path = "../teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../teaclave-sgx-sdk/sgx_tstd" }
sgx_trts = { path = "../teaclave-sgx-sdk/sgx_trts" }
# sgx_build_helper = { path = "../teaclave-sgx-sdk/sgx_build_helper" }
# sgx_cov = { path = "../teaclave-sgx-sdk/sgx_cov" }
# sgx_crypto_helper = { path = "../teaclave-sgx-sdk/sgx_crypto_helper" }
# sgx_libc = { path = "../teaclave-sgx-sdk/sgx_libc" }
# sgx_rand = { path = "../teaclave-sgx-sdk/sgx_rand" }
# sgx_rand_derive = { path = "../teaclave-sgx-sdk/sgx_rand_derive" }
# sgx_serialize = { path = "../teaclave-sgx-sdk/sgx_serialize" }
# sgx_serialize_derive = { path = "../teaclave-sgx-sdk/sgx_serialize_derive" }
# sgx_serialize_derive_internals = { path = "../teaclave-sgx-sdk/sgx_serialize_derive_internals" }
# sgx_tcrypto = { path = "../teaclave-sgx-sdk/sgx_tcrypto" }
# sgx_tcrypto_helper = { path = "../teaclave-sgx-sdk/sgx_tcrypto_helper" }
# sgx_tdh = { path = "../teaclave-sgx-sdk/sgx_tdh" }
# sgx_tkey_exchange = { path = "../teaclave-sgx-sdk/sgx_tkey_exchange" }
# sgx_tprotected_fs = { path = "../teaclave-sgx-sdk/sgx_tprotected_fs" }
# sgx_tse = { path = "../teaclave-sgx-sdk/sgx_tse" }
# sgx_tseal = { path = "../teaclave-sgx-sdk/sgx_tseal" }
# sgx_tunittest = { path = "../teaclave-sgx-sdk/sgx_tunittest" }
# sgx_ucrypto = { path = "../../../teaclave-sgx-sdk/sgx_ucrypto" }
# sgx_unwind = { path = "../../../teaclave-sgx-sdk/sgx_unwind" }
# sgx_urts = { path = "../../../teaclave-sgx-sdk/sgx_urts" }
