[package]
name = "cess_enclave"
version = "0.0.2"
authors = ["CESS Labs"]
# edition = "2021"

[lib]
name = "cess_enclave"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["net", "thread", "backtrace"] }
sgx_trts = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_rand = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tcrypto = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tse     = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_types = { path = "../teaclave-sgx-sdk/sgx_types" }
sgx_tstd = { path = "../teaclave-sgx-sdk/sgx_tstd" }
sgx_rand = { path = "../teaclave-sgx-sdk/sgx_rand" }
sgx_tcrypto = { path = "../teaclave-sgx-sdk/sgx_tcrypto" }
#sgx_align_struct_attribute = { path = "../teaclave-sgx-sdk/sgx_align_struct_attribute" }
#sgx_alloc = { path = "../teaclave-sgx-sdk/sgx_alloc" }
#sgx_backtrace = { path = "../teaclave-sgx-sdk/sgx_backtrace" }
#sgx_backtrace_sys = { path = "../teaclave-sgx-sdk/sgx_backtrace_sys" }
#sgx_build_helper = { path = "../teaclave-sgx-sdk/sgx_build_helper" }
#sgx_cov = { path = "../teaclave-sgx-sdk/sgx_cov" }
#sgx_crypto_helper = { path = "../teaclave-sgx-sdk/sgx_crypto_helper" }
#sgx_demangle = { path = "../teaclave-sgx-sdk/sgx_demangle" }
#sgx_libc = { path = "../teaclave-sgx-sdk/sgx_libc" }
#sgx_no_tstd = { path = "../teaclave-sgx-sdk/sgx_no_tstd" }
#sgx_rand_derive = { path = "../teaclave-sgx-sdk/sgx_rand_derive" }
#sgx_serialize = { path = "../teaclave-sgx-sdk/sgx_serialize" }
#sgx_serialize_derive = { path = "../teaclave-sgx-sdk/sgx_serialize_derive" }
#sgx_serialize_derive_internals = { path = "../teaclave-sgx-sdk/sgx_serialize_derive_internals" }
#sgx_tcrypto_helper = { path = "../teaclave-sgx-sdk/sgx_tcrypto_helper" }
#sgx_tdh = { path = "../teaclave-sgx-sdk/sgx_tdh" }
#sgx_tkey_exchange = { path = "../teaclave-sgx-sdk/sgx_tkey_exchange" }
#sgx_tprotected_fs = { path = "../teaclave-sgx-sdk/sgx_tprotected_fs" }
sgx_trts = { path = "../teaclave-sgx-sdk/sgx_trts" }
sgx_tse = { path = "../teaclave-sgx-sdk/sgx_tse" }
#sgx_tseal = { path = "../teaclave-sgx-sdk/sgx_tseal" }
#sgx_tunittest = { path = "../teaclave-sgx-sdk/sgx_tunittest" }
#sgx_unwind = { path = "../teaclave-sgx-sdk/sgx_unwind" }

[dependencies]
cess_pbc        = { path = "../cess_pbc" }
cess_bncurve    = { path = "../cess_bncurve" }
base64          = { git = "https://github.com/mesalock-linux/rust-base64-sgx" }
serde           = { git = "https://github.com/mesalock-linux/serde-sgx", features = ["derive"] }
rust-crypto     = { git = "https://github.com/mesalock-linux/rust-crypto-sgx" }
serde_json      = { git = "https://github.com/mesalock-linux/serde-json-sgx" }
merkletree      = { git = "https://github.com/tehsunnliu/merkletree.git", package = "merkle_light" }
http_req        = { git = "https://github.com/mesalock-linux/http_req-sgx" }
libc            = "0.2.126"
chrono = { git = "https://github.com/mesalock-linux/chrono-sgx" }
webpki = { git = "https://github.com/mesalock-linux/webpki", branch = "mesalock_sgx" }
yasna = { git = "https://github.com/mesalock-linux/yasna.rs-sgx", features = ["bit-vec", "num-bigint", "chrono"] }
num-bigint = { git = "https://github.com/mesalock-linux/num-bigint-sgx" }
bit-vec = { version = "0.6", default-features = false}
httparse = { version = "1.3.2", default-features=false }
itertools = { version = "0.8" , default-features = false, features = []}
webpki-roots= { git = "https://github.com/mesalock-linux/webpki-roots", branch = "mesalock_sgx" }
lazy_static = { version = "*", default-features = false, features = ["spin_no_std"] }

[dependencies.rustls]
git = "https://github.com/mesalock-linux/rustls"
branch = "mesalock_sgx"
features = ["dangerous_configuration"]